ajustes index.html

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <footer>
         <p>Travelgram © 2024</p>
         <div class="footerRight">
-            <p>Termos de uso</p>
-            <p>Política de privacidade</p>
+            <a href="#">Termos de uso</a>
+            <a href="#">Política de privacidade</a>
         </div>
     </footer>
 </body>
