anotações e correções aula

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <navbar>
+    <!-- Usou aqui -->
+    <nav>
         <div class="logoTravelgram">
-        <img src="./assets/logoTravelgram.png" alt="Logotipo da Travelgram">
+        <img src="./assets/logoTravelgram.png" alt="Logo da Travelgram">
         </div>
         <div class="navbarItems">
             <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -23,7 +24,7 @@
             <a href="#">Minhas viagens</a>
             <a href="#"><img src="./assets/profilePic.png" alt="Foto de perfil que navega para a página de perfil" class="navbarProfilePic"></a>
         </div>
-    </navbar>
+    </nav>
 
     <div class="mainContent">
         <div class="profile">
